# WorkspaceApp

./: .gitignore  README.md  package-lock.json
prompts/: prompt_01  prompt_02  prompt_03
workspace-ui/: index.html  package-lock.json  package.json  tsconfig.json
workspace-ui/src/: App.css  App.tsx  main.tsx
workspace-ui/src-tauri/: Cargo.toml  tauri.conf.json
workspace-ui/src-tauri/capabilities/: default.json
workspace-ui/src-tauri/cef-plugin/: Cargo.toml
workspace-ui/src-tauri/cef-plugin/src/: lib.rs  manager.rs  renderer.rs  transfer.rs
workspace-ui/src-tauri/src/: lib.rs  main.rs
workspace-ui/src/components/canvas/: CanvasGrid.tsx  CanvasItem.tsx  CanvasViewport.tsx  ConnectionLines.tsx  FocusZone.tsx  InfiniteCanvas.tsx  ProximityFeedback.tsx  SelectionRect.tsx  WebTabItem.tsx  index.ts
workspace-ui/src/components/ui/: AddModal.tsx  BoardGenerationModal.tsx  BottomToolbar.tsx  CollaboratorCursors.tsx  ContextMenu.tsx  HelpModal.tsx  Minimap.tsx  SearchPanel.tsx  SidePanel.tsx  TaskGenerationModal.tsx  ToolProfilesModal.tsx  Toolbar.tsx  index.ts
workspace-ui/src/constants/: canvas.ts
workspace-ui/src/hooks/: index.ts  useCanvasNavigation.ts  useFileDrop.ts  useItemDrag.ts  useItemResize.ts  useKeyboard.ts  useProximity.ts  useSelection.ts
workspace-ui/src/models/: board.ts  connection.ts  index.ts  item.ts  viewport.ts
workspace-ui/src/services/: ai.ts  clustering.ts  index.ts  persistence.ts  realtime.ts
workspace-ui/src/stores/: canvasStore.ts  index.ts  toolProfileStore.ts  uiStore.ts  webTabStore.ts
workspace-ui/src/types/: index.ts
workspace-ui/src/utils/: geometry.ts  id.ts  index.ts  platform.ts
